--- a/rupnik2015.tex
+++ b/rupnik2015.tex
@@ -1,5 +1,5 @@
 \documentclass[twoside,11pt]{article}
-\usepackage{jair, theapa, rawfonts}
+\usepackage{jair, theapa, rawfonts, url}
 \usepackage{pgfplots}
 %\usepackage{graphicx}
 
@@ -681,7 +681,7 @@ Another point of interest is to evaluate the system on languages with scarce lin
 
 In order to further improve the performance of the classifier for cluster linking, additional features should also be extracted from articles and clusters and checked if they can increase the accuracy of the classification. Since the amount of linguistic resources vary significantly from language to language it would also make sense to build a separate classifier for each language pair. Intuitively, this should improve performance since weights of individual learning features could be adapted to the tested pair of languages.
 
-%\acks{The authors wish to thank blah blah blah.}
+\acks{The authors gratefully acknowledge that the funding for this work was provided by the projects X-LIKE (ICT-257790-STREP), MultilingualWeb (PSP-2009.5.2 Agr.\# 250500), TransLectures (FP7-ICT-2011-7), PlanetData (ICT-257641-NoE), RENDER (ICT-257790-STREP), and META-NET (ICT-249119-NoE).}
 
 \vskip 0.2in
 \bibliography{jair}
